# maple-query

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md
services/agent-service/: .dockerignore  Dockerfile  cloudbuild.yaml  pyproject.toml
services/agent-service/src/agent_service/: __init__.py  __main__.py  app.py  auth.py  config.py  deps.py  sse.py  telemetry.py
services/agent-service/src/agent_service/routes/: chat.py  corpus.py  datasets.py  health.py  sql.py
services/agent-service/tests/: conftest.py  test_auth.py  test_chat_route.py  test_corpus_route.py  test_cors.py  test_datasets_route.py  test_healthz_readyz.py  test_loop_impl_flag.py  test_session_wiring.py  test_sql_route.py  test_startup_config.py
services/ingest/: pyproject.toml
services/ingest/src/ingest/: entrypoint.py  types.py
services/ingest/src/ingest/clients/: ckan.py  gcs.py  http.py
services/ingest/src/ingest/config/: settings.py  sources.py
services/ingest/src/ingest/core/: dedup.py  format_sniff.py  language.py  path_builder.py  pipeline.py  quarantine.py  runlog.py  slugify.py
services/ingest/src/ingest/providers/: logging.py  retry.py
services/ingest/tests/integration/: test_pipeline.py
services/ingest/tests/unit/: test_ckan.py  test_config_sources.py  test_dedup.py  test_format_sniff.py  test_gcs.py  test_http.py  test_language.py  test_path_builder.py  test_quarantine.py  test_runlog.py  test_slugify.py
services/semantic-enrich/: .gitignore  pyproject.toml
services/semantic-enrich/agent/prompts/: system.j2
services/semantic-enrich/agent/prompts/v2/: system.j2  triage.j2  verify.j2
services/semantic-enrich/eval/: questions-agent-traces.yaml  questions-numeric-trust.yaml  questions.yaml  scenarios-multiturn.yaml
services/semantic-enrich/eval/prompts/: sql_generation.j2
services/semantic-enrich/eval/reports/: .gitignore  agent-traces-baseline-v1.json  agent-traces-floor-calibration-v2.json  m5-parity-2026-07-18.json  triage-classifier-eval.json  verify-shadow-run2.json
services/semantic-enrich/scripts/: columns_generate_openai.py  reembed.sh
services/semantic-enrich/src/semantic_enrich/: __init__.py  __main__.py  entrypoint.py  types.py
services/semantic-enrich/src/semantic_enrich/clients/: bq.py  openai.py
services/semantic-enrich/src/semantic_enrich/config/: settings.py
services/semantic-enrich/src/semantic_enrich/core/: agent_cache.py  agent_dispatch.py  agent_eval.py  agent_events.py  agent_history.py  agent_loop.py  agent_parity.py  agent_request.py  agent_tools.py  agent_tracing.py  column_generator.py  column_inputs.py  column_prompt.py  columns_load.py  dataset_extract.py  dataset_generator.py  dataset_prompt.py  datasets_load.py  embed.py  embedding_pass.py  eval_question_set.py  eval_report.py  eval_runner.py  (+15 more)
services/semantic-enrich/tests/: conftest.py
services/semantic-enrich/tests/e2e/: test_agent_chat_dry_run.py  test_columns_dry_run.py  test_datasets_dry_run.py  test_eval_dry_run.py  test_reembed_dry_run.py
services/semantic-enrich/tests/integration/: conftest.py  openai_fakes.py  test_agent_eval_runner.py  test_agent_loop.py  test_agent_loop_tool_contract.py  test_citation_contract.py  test_clarify_flow.py  test_column_generator.py  test_column_inputs.py  test_columns_embed.py  test_columns_load.py  test_columns_reembed.py  test_dataset_extract.py  test_dataset_generator.py  test_datasets_load.py  test_datasets_reembed.py  test_derivation_emit.py  test_embedding_pass.py  test_eval_runner.py  test_grounding_pipeline.py  test_parity_runner.py  test_reformulation_policy.py  test_representative_backfill.py  test_research_capture.py  test_research_phase.py  test_retrieval.py  test_session_memory.py  test_surrender_contract.py  test_triage_classifier_eval.py  test_triage_pipeline.py  test_v1_v2_parity_stubbed.py  test_verify_pipeline.py
services/semantic-enrich/tests/unit/: conftest.py  test_agent_cache.py  test_agent_dispatch.py  test_agent_events.py  test_agent_history.py  test_agent_question_set.py  test_agent_tools.py  test_braintrust_span_wrapping.py  test_caveat_composition.py  test_column_generator.py  test_column_inputs.py  test_column_prompt.py  test_columns_load.py  test_compaction_v2.py  test_dataset_prompt.py  test_derivation_build.py  test_derivation_event.py  test_derivation_provenance.py  test_derivation_units.py  test_describe_corpus.py  test_embed.py  test_eval_question_set.py  test_eval_report.py  test_generate.py  test_grounding.py  test_list_documents_required_columns.py  test_list_documents_samples.py  test_magnitude.py  test_magnitude_dispositions.py  test_numeric_trust_eval.py  test_openai_client.py  test_package_grouper.py  test_pipeline_budgets.py  test_pipeline_phases.py  test_plan_hints.py  test_prompt_token_gauge.py  test_prompt_v2.py  test_reembed_writeback.py  test_replay_cache_v2.py  test_run_sql_autoquote.py  (+18 more)
services/semantic-enrich/vllm/: .gitignore  pyproject.toml  validate_round_trip.py
services/semantic-enrich/vllm/scripts/: kill_vllm.sh  serve_embedding.sh  serve_generation.sh  swap_to_embedding.sh  swap_to_generation.sh  wait_for_ready.sh  wait_for_vram_clear.sh
services/semantic-enrich/vllm/tests/: conftest.py  test_validate_round_trip.py
services/warehouse-load/: AGENTS.md  README.md  pyproject.toml
services/warehouse-load/scripts/: backfill_package_id.py
services/warehouse-load/src/warehouse_load/: __init__.py  __main__.py  entrypoint.py  types.py
services/warehouse-load/tests/: conftest.py
services/warehouse-load/tests/e2e/: test_documents_dry_run.py
services/warehouse-load/tests/integration/: conftest.py  test_backfill_package_id.py  test_documents_bucket_intersection.py  test_documents_merge.py  test_rows_runner.py
services/warehouse-load/tests/unit/: test_column_index.py  test_csv_sniff.py  test_document_status.py  test_documents_filter.py  test_header_detect.py  test_header_normalise.py  test_row_stream.py  test_rows_merge.py  test_rows_runner.py  test_runlog_enum_drift.py  test_runlog_key_drift.py  test_runlog_reader.py  test_schema_loader.py  test_settings.py  test_types.py
(+158 files in other folders)
