[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-service"
version = "0.1.0"
description = "MapleQuery agent HTTP surface. Thin FastAPI wrap over semantic-enrich's 5.1 loop; exposes SSE chat + a small REST surface to the web app."
requires-python = ">=3.12,<3.13"
dependencies = [
  # Sibling package. The loop, tools, cache, events, history, guard,
  # executor, and BQ/OpenAI clients all live here — the service imports
  # them directly, nothing is duplicated.
  "semantic-enrich",
  # HTTP surface.
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  # Config validation. Same pydantic pair as semantic-enrich so the two
  # Settings objects behave identically.
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  # Logging. Same choice as sibling services so events aggregate cleanly
  # in Cloud Logging.
  "structlog>=24.1,<26",
  # Observability. `braintrust` is imported by the sibling package too,
  # but it's declared here so the runtime image and any editable install
  # resolve it directly (the semantic-enrich path dep doesn't propagate
  # optional groups). `posthog` is server-side product analytics; the
  # capture calls no-op when no key is configured.
  "braintrust>=0.0.200,<1",
  "posthog>=3.5,<6",
]

[project.scripts]
agent-service = "agent_service.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=5.0,<6",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
  # ASGI test client used by the FastAPI TestClient in Starlette >=0.37.
  "httpx>=0.27,<1",
]

[tool.uv.sources]
# Path-based sibling import per 5.2 PRD §1. `uv sync` in this directory
# picks up the semantic-enrich package from disk; the Docker build stage
# copies both trees into the image so the same path resolves at runtime.
semantic-enrich = { path = "../semantic-enrich", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/agent_service"]

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# FastAPI documents `Depends(...)` / `Query(...)` / `Header(...)` in
# defaults as the idiomatic pattern; B008 is a false positive for
# FastAPI route handlers.
"**/routes/*.py" = ["B008"]
"**/auth.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["agent_service"]

[[tool.mypy.overrides]]
module = [
  "google.cloud",
  "google.cloud.*",
  # The sibling `semantic-enrich` package doesn't ship a `py.typed`
  # marker (heavy ML deps make one impractical). We import it as-if-
  # typed here rather than tunneling PEP 561 through a workspace root.
  "semantic_enrich",
  "semantic_enrich.*",
  "braintrust",
  "braintrust.*",
  "posthog",
  "posthog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/agent_service"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
