[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-enrich"
version = "0.1.0"
description = "MapleQuery semantic enrichment runtime — outlines-backed guided JSON + sentence-transformers embeddings."
requires-python = ">=3.12,<3.13"
dependencies = [
  # Config + data validation
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "python-dotenv>=1.0,<2",
  # Logging
  "structlog>=24.1,<26",
  # CLI
  "typer>=0.15,<1",
  # GCP clients. Laptop-side at runtime; pulled in unconditionally
  # because the package is one unit and the load-pass unit tests need
  # the SchemaField type even when run on a box without ADC.
  "google-cloud-bigquery>=3.23,<4",
  # Retry primitives for BQ calls. Same choice as warehouse-load so
  # the policies stay comparable.
  "tenacity>=8.3,<9",
  # OpenAI client — powers datasets-embed / columns-embed after the
  # 4.7 swap plus the datasets-reembed / columns-reembed one-off
  # backfill. text-embedding-3-small returns 1536-dim vectors.
  "openai>=1.50,<2",
  # 4.6 retrieval-validation harness deps. YAML for the committed
  # question fixture; jinja2 for the operator-edited prompt template;
  # sqlglot for the BigQuery-dialect parser the SQL guard walks.
  "pyyaml>=6.0,<7",
  "jinja2>=3.1,<4",
  "sqlglot>=25.0,<27",
  # LLM observability. `braintrust.wrap_openai` sits around the OpenAI
  # client and logs every chat/embedding call as a span. Import-only
  # when no API key is configured, so no-op in dev / tests.
  "braintrust>=0.0.200,<1",
]

[project.scripts]
semantic-enrich = "semantic_enrich.entrypoint:app"

[project.optional-dependencies]
# GPU-side generation + embedding pipeline. Only needed on the GPU box for
# `datasets-generate`, `columns-generate`, and `smoke-test`. Not installed
# by agent-service (which only uses the runtime half of this package).
#
# GPU box (conda): pip install -e '.[gpu]'
# GPU box (uv):    uv sync --extra gpu
gpu = [
  # Model runtime. transformers 4.51 is the floor where the qwen3
  # architecture lands.
  "transformers>=4.51,<5",
  "torch>=2.4,<3",
  "accelerate>=0.34,<2",
  # Guided JSON generation. outlines wraps the transformers model and
  # constrains the decoder against a JSON Schema / pydantic class.
  "outlines>=0.1,<2",
  # Embedding model loader.
  "sentence-transformers>=3.0,<5",
  # HF Hub metadata API — used by `smoke-test --write-lock` to capture
  # the resolved commit SHA of each model.
  "huggingface-hub>=0.24,<1",
]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5.0,<6",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
  # Property tests on sample-selector and stage-io round-trips.
  "hypothesis>=6.103,<7",
  # Layering contract enforcement — see [tool.importlinter] below.
  "import-linter>=2.0,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_enrich"]

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Typer documents `Option(...)` in defaults as the idiomatic pattern;
# B008 is a false positive for typer commands. Globbed so the ignore
# matches whether ruff is invoked from inside the package or from the
# repo root.
"**/entrypoint.py" = ["B008"]
# The columns prompt template is pinned verbatim. Em-dashes in the
# instructions are intentional and snapshot-tested; the RUF001
# "ambiguous character" lint is a false positive against pinned
# prompt content.
"**/column_prompt.py" = ["RUF001"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["semantic_enrich"]

# Heavy ML deps don't ship type stubs. Treat them as opaque rather than
# blocking the strict-mypy gate; the typed boundary is our own
# `load_*_model` / `generate_*` / `embed_*` signatures.
[[tool.mypy.overrides]]
module = [
  "outlines",
  "outlines.*",
  "sentence_transformers",
  "sentence_transformers.*",
  "torch",
  "torch.*",
  "transformers",
  "transformers.*",
  "huggingface_hub",
  "huggingface_hub.*",
  "google.cloud",
  "google.cloud.*",
  "google.api_core",
  "google.api_core.*",
  "openai",
  "openai.*",
  "sqlglot",
  "sqlglot.*",
  "yaml",
  "braintrust",
  "braintrust.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/semantic_enrich"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.importlinter]
root_packages = ["semantic_enrich"]
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
  "semantic_enrich.entrypoint",
  "semantic_enrich.core",
  "semantic_enrich.clients",
  "semantic_enrich.providers",
  "semantic_enrich.config",
  "semantic_enrich.types",
]
