[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-enrich-vllm-validate"
version = "0.1.0"
description = "Round-trip validation gate for the semantic-enrich vLLM serving stack."
requires-python = ">=3.12,<3.13"
dependencies = [
  # OpenAI-compatible client; vLLM exposes /v1.
  "openai>=1.40,<2",
  # Plain HTTP client for the /v1/models probe (the openai SDK does
  # not expose that endpoint as a typed method on every version line).
  "httpx>=0.27,<1",
  # Schema validation of the guided-JSON response.
  "pydantic>=2.7,<3",
  # JSON structured logging — matches the rest of the repo.
  "structlog>=24.1,<26",
  # Vector norm + dimension checks.
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5.0,<6",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
]

[project.scripts]
validate-round-trip = "validate_round_trip:main"

[tool.hatch.build.targets.wheel]
# Single-file module — hatch needs an explicit include because the
# default discovery walks src/<package>/ which we don't have.
include = ["validate_round_trip.py"]

[tool.hatch.build.targets.wheel.sources]
"validate_round_trip.py" = "validate_round_trip.py"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["validate_round_trip.py"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["."]

[tool.coverage.run]
source = ["validate_round_trip"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100
